fix-ui(game play): summary player scores overflow update

--- a/public/app/styles/components/PlayerScores.sass
+++ b/public/app/styles/components/PlayerScores.sass
@@ -1,4 +1,6 @@
 .PlayerScores
+  width: 100%
+  overflow: hidden
   margin-top: 2rem
 
   .PlayerScores-heading
